# TimeMeasure

./: CMakeLists.txt  CyclicDataOutputterThread.h  FrequencyMeasure.h  Histogram.h  IntervalMeasure.h  LICENSE  Measurer.h  OutputterDestinations.h  OutputterDestinationsZmq.h  README.md  TimeMeasureConfig.cmake  TimeMeasureTypes.h  getType.h
.devcontainer/: Dockerfile  devcontainer.json
Examples/: CMakeLists.txt  main.cpp
Examples/DestinationZmq/: CMakeLists.txt  main.cpp
ZmqClient/: CMakeLists.txt  main.cpp
cmake/: TimeMeasureConfig.cmake.in
